fixed: about me sections fixed, font size changed, background on mobile changed

--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -28,7 +28,11 @@
   }
 
   &__text {
-    line-height: 1.8;
+    line-height: 2;
     text-align: justify;
+
+    @include respond(phone) {
+      font-size: 1.9rem;
+    }
   }
 }
